--- a/flag-game/styles.css
+++ b/flag-game/styles.css
@@ -6,13 +6,18 @@
 
 #root {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 50px;
 }
 
 .container {
+  width: 462px;
+  height: 462px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid black;
@@ -23,17 +28,43 @@
   justify-content: center;
 }
 
+.row:first-of-type .flag {
+  background-color: red;
+}
+
 .flag {
   width: 50px;
   height: 50px;
   margin: 10px;
-  background-color: deepskyblue;
-  border: solid 5px transparent;
   border-radius: 25px;
+  background-image: url("./flag.svg");
+  background-size: cover;
   outline: none;
-  transition: border .2s ease-out;
+  transition: filter 0.2s ease-out;
 }
 
 .flag:hover {
-  border-color: royalblue;
+  filter: drop-shadow(0 2px 2px red);
+}
+
+.btn-wrapper {
+  margin-top: 20px;
+}
+
+.btn {
+  padding: 5px;
+  margin: 5px;
+}
+
+.game-over {
+  color: red;
+  font-size: 3em;
+  font-weight: bold;
+  background-color: black;
+  animation: fadeIn 0.25s forwards;
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
